Changelog for Writer2LaTeX version 1.2 -> 1.4

---------- version 1.3.1 alpha ----------

[w2x] Display equations are now recognized by the same means as in the LaTeX export: A single equation in a paragraph with no
  text content except whitespace and an optional sequence number in brackets is considered a display equation. In that case
  it is exported with display="block"

[w2x] New boolean option use_mathjax (default false): If set to true and export format is HTML5, documents will load the MathJax
  JavaScript library for rendering of formulas (otherwise the document will rely on native MathML support in the browser)

[w2x] New boolean option use_svg (default false): If set to true and export format is HTML5, vector graphics are exported as
  inline SVG, if possible

[w2x] Added support for HTML5 as export type (the ConverterFactory understands the pseudo-MIME type text/html5).
  The converter creates polyglot HTML5 documents, i.e. documents will be conforming to HTML5 as well as XML standards.

[all] Optimized the parsing of the source document saving some time and space (several intermediate steps and large byte arrays
  are now avoided)

[all] API change: The converters can now convert directly from a DOM tree

[all] Removed unused code in writer2latex.xmerge

[w2x] Moved localized strings to .properties files