@@ -16,9 +16,9 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston,
  *  MA  02111-1307  USA
  *
- *  Copyright: 2002-2010 by Henrik Just
+ *  Copyright: 2002-2012 by Henrik Just
  *  
- *  Version 1.2 (2010-03-15)
+ *  Version 1.4 (2012-04-12)
  *
  *  All Rights Reserved.
  */
@@ -135,7 +135,9 @@ public class TableReader {
                 sRelColWidth[nCol] = (100.0F*nRelColWidth[nCol]/nColSum)+"%";
             }
             else {
-                sRelColWidth[nCol] = (100.0F/nCols)+"%";
+            	// Calculate the relative column width from the absolute column widths
+            	// This may not add up to exactly 100%, but we will live with that
+                sRelColWidth[nCol] = Misc.divide(sColWidth[nCol], sTableWidth, true);
             }
         }
 
