@@ -2,6 +2,11 @@ Changelog for Writer2LaTeX version 1.2 -> 1.4
 
 ---------- version 1.3.1 alpha ----------
 
+[w2x] The option ignore_table_dimensions has been replace by a new option table_size with values none (do not export table
+  dimensions), relative (always use relative width) and auto (use the formatting of the source document):
+  If set to true, all tables are exported with relative width, even
+  if they have an absolute width in the source document
+
 [w2x] Display equations are now recognized by the same means as in the LaTeX export: A single equation in a paragraph with no
   text content except whitespace and an optional sequence number in brackets is considered a display equation. In that case
   it is exported with display="block"
